[package]
name = "nanovm"
version = "0.1.0"
edition = "2021"
authors = ["TheMapleseed"]
description = "Enterprise-grade rootless virtualization system"
license = "GPL-3.0"
repository = "https://github.com/TheMapleseed/NANOVM"
readme = "README.md"
keywords = ["virtualization", "security", "isolation", "container", "vm"]
categories = ["virtualization", "command-line-utilities"]

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Network dependencies
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
url = "2.4"
http = "0.2"
httparse = "1.8"

# Security dependencies
hmac = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Config dependencies
structopt = "0.3"
config = "0.13"
jsonschema = "0.17"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.5"
criterion = "0.5"
mockall = "0.11"
test-log = "0.2"

[features]
default = []
enterprise = ["metrics", "tracing", "advanced-security"]
metrics = []
tracing = []
advanced-security = []

[[bin]]
name = "nanovm"
path = "src/main.rs"

[lib]
name = "nanovm"
path = "src/lib.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[workspace]
members = [
  ".",
] 